<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".view.IdentifyTheBreed">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="100"
    >
    <include
        android:id="@+id/tool_bar"
        android:elevation="2dp"
        layout="@layout/tool_bar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <androidx.cardview.widget.CardView
            android:id="@+id/timer_card_view"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#607d8b"
            app:cardCornerRadius="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timer_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/timer_active" />

                <TextView
                    android:id="@+id/timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_timer_value"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp"
            app:contentPadding="15dp">


            <ImageView
                android:id="@+id/dogImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:background="@drawable/frame"
                />

            <ImageView
                android:src="@drawable/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="300dp"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/spinner_bg"
            android:dropDownWidth="300dp"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:paddingRight="14dp"
            android:popupBackground="@android:color/white"
            android:popupElevation="3dp"
            android:stateListAnimator="@drawable/spinner_sla"
            app:layout_constraintTop_toTopOf="parent" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
        <androidx.cardview.widget.CardView
            android:id="@+id/correctOrWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/answerWrongRed"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp"
            android:layout_margin="10dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/correctOrWrongImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_close_black_24dp" />

                <TextView
                    android:id="@+id/correctOrWrongText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/correctAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/correctAnswerBlue"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone">

            <TextView
                android:id="@+id/correctAnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answer_default"
                android:textColor="@android:color/white" />

    </androidx.cardview.widget.CardView>
</LinearLayout>

        <Button
            android:id="@+id/submitNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:onClick="clickSubmit"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>