<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".view.IdentifyTheDog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100">
        <include
            android:id="@+id/tool_bar"
            android:elevation="2dp"
            layout="@layout/tool_bar" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <androidx.cardview.widget.CardView
                android:id="@+id/timer_card_view"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#607d8b"
                app:cardCornerRadius="20dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/timer_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/timer_active" />

                    <TextView
                        android:id="@+id/timer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_timer_value"
                        android:layout_gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="60"
           android:orientation="vertical"
           >
           <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
               android:weightSum="100"
           >
           <LinearLayout
               android:layout_weight="50"
               android:layout_marginTop="16dp"
               android:id="@+id/first_two_images"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:weightSum="100"
               >
               <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="50">
                   <androidx.cardview.widget.CardView
                       android:id="@+id/card_view1"
                       android:layout_width="150dp"
                       android:layout_height="150dp"
                       app:cardBackgroundColor="@color/colorAccent"
                       app:cardCornerRadius="20dp"
                       app:contentPadding="15dp"
                       android:layout_margin="10dp"
                       android:layout_centerHorizontal="true">

                       <ImageButton
                           android:id="@+id/dog_button_1"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@drawable/frame"
                           android:scaleType="fitXY"
                           />

                       <ImageView
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:src="@drawable/frame" />
                   </androidx.cardview.widget.CardView>
               </RelativeLayout> <RelativeLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="50">
               <androidx.cardview.widget.CardView
                   android:id="@+id/card_view2"
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   app:cardBackgroundColor="@color/colorAccent"
                   app:cardCornerRadius="20dp"
                   app:contentPadding="15dp"
                   android:layout_margin="10dp"
                   android:layout_centerHorizontal="true">


                   <ImageButton
                       android:id="@+id/dog_button_2"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@drawable/frame"
                       android:scaleType="fitXY"
                       />

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/frame" />
               </androidx.cardview.widget.CardView>
               </RelativeLayout>



           </LinearLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="50"
               >

               <androidx.cardview.widget.CardView
                   android:id="@+id/card_view3"
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   android:layout_centerHorizontal="true"
                   android:layout_margin="10dp"
                   app:cardBackgroundColor="@color/colorAccent"
                   app:cardCornerRadius="20dp"
                   app:contentPadding="15dp">


                   <ImageButton
                       android:id="@+id/dog_button_3"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@drawable/frame"
                       android:scaleType="fitXY" />

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/frame" />
               </androidx.cardview.widget.CardView>
           </RelativeLayout>
           </LinearLayout>
       </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:id="@+id/breed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical">



                <androidx.cardview.widget.CardView
                    android:id="@+id/correctOrWrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/answerWrongRed"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="10dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/correctOrWrongImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_close_black_24dp" />

                        <TextView
                            android:id="@+id/correctOrWrongText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wrong"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"
                android:onClick="next"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>